# sh.dev

./: .gitignore  Dockerfile  README.md  dev.sh  pyproject.toml  pytest.ini  setup-user.service  setup-user.sh  setup.cfg  shell.sh  sonar-project.properties
.github/workflows/: ci.yml
app/: dev.py
app/dev/: __init__.py  container.py  image.py  utils.py  volume.py
dev/: __init__.py  conftest.py  main.py  test_main.py
dev/cli/: config.py  container.py  env.py  image.py  test_config.py  test_container.py  test_env.py  test_image.py  test_utils.py  test_volume.py  utils.py  volume.py
dev/manage/: __init__.py  config.py  test_config.py  test_utils.py  test_volume.py  utils.py  volume.py
docker/: fix-groups.sh
image/: Dockerfile
