[tool.poetry]
name = "sh.dev"
version = "3.0.0"
description = "A tool to manage containerized development environments."
keywords = ["docker", "container", "environment"]
authors = ["Kevin Herrera <kevin@herrera.io>"]
homepage = "https://github.com/kherge/sh.dev"
repository = "https://github.com/kherge/sh.dev.git"
license = "ISC"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
