[tool.poetry]
name = "sh.dev"
version = "3.0.0"
description = "A tool to manage containerized development environments."
keywords = ["docker", "container", "environment"]
authors = ["Kevin Herrera <kevin@herrera.io>"]
homepage = "https://github.com/kherge/sh.dev"
repository = "https://github.com/kherge/sh.dev.git"
license = "ISC"

packages = [
    { include="dev", from="." }
]

[tool.poetry.dependencies]
docker = "^5.0.0"
python = "^3.8"
six = "^1.16.0"
typer = {extras = ["all"], version = "^0.3.2"}
tabulate = "^0.8.9"

[tool.poetry.scripts]
dev = "dev.main:app"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
